syntax = "proto3";

package proto;


service Crobat {
  rpc GetSubdomains (QueryRequest) returns (stream Domain) {}
  rpc GetTLDs (QueryRequest) returns (stream Domain) {}
  rpc ReverseDNS (QueryRequest) returns (stream Domain) {}
  rpc ReverseDNSRange (QueryRequest) returns (stream Domain) {}
}

message QueryRequest {
  string query = 1;
}

message Domain {
  string domain = 1;
  string ipv4 = 2;
}
